--- a/angular.json
+++ b/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "6d7fcd03-fb18-4edc-886a-e7789c950b51"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
